assets/css/main.scss
/* ... */
#nav-icon {
    $base-size: 2.5em;
    width: $base-size;
    height: 0.75 * $base-size;
    position: relative;
    margin-top: 1em;
    transform: rotate(0deg) skewX(-$rotation);
    // transition: 0.5s ease-in-out;
    cursor: pointer;

    span {
        display: block;
        position: absolute;
        height: 0.12 * $base-size;
        width: 100%;
        background: $white-color;
        border-radius: 0.12 * $base-size;
        opacity: 1;
        left: 0;
        transform: rotate(0deg);
        // transition: $transition;

        &:nth-child(1) {
            top: 0;
            transform-origin: left center;
        }

        &:nth-child(2) {
            top: 0.3 * $base-size;
            transform-origin: left center;
        }

        &:nth-child(3) {
            top: 0.6 * $base-size;
            transform-origin: left center;
        }
    }

    .expanded & span {
        &:nth-child(1) {
            transform: rotate(45deg);
            top: -.07 * $base-size;
            left: 0.13 * $base-size;
        }

        &:nth-child(2) {
            width: 0;
            opacity: 0;
        }

        &:nth-child(3) {
            transform: rotate(-45deg);
            top: 0.65 * $base-size;
            left: 0.13 * $base-size;
        }
    }
}

section {
    clear: both;
    min-height: 28em;
    padding: 0 1.5em 1em;

    .list-items {
        list-style: none;
        padding-left: 0;

        .list-item-description {
            position: relative;
            padding-left: 1em;
            font-size: smaller;
            transform: skewX($rotation);

            &:before {
                content: '';
                position: absolute;
                bottom: 0;
                left: 0;
                top: -38px;
                width: 0.25em;
                background-color: $black-color;
            }

            strong {
                color: $black-color;
            }
        }
    }

    a {
        color: $black-color;
    }
}

main {
    clear: both;

    :first-child {
        margin-top: 0;
    }

    em {
        font-style: normal;
        font-weight: bold;
        font-size: larger;
    }

    li {
        list-style: none;

        &:before {
            content: '';
            display: inline-block;
            position: relative;
            left: -1em;
            top: 0;
            width: 2px;
            height: 0.75em;
            background-color: $brand-color;
            transform: skewX($rotation);
        }
    }

    &.space-left {
        padding-left: 100px;
    }
}

// a.button,
// button,
input,
textarea {
    padding: 0.5em;
    border: 1px solid $black;
    border-radius: 5px;
}

a.button,
button {
    background-color: $brand-color;
    border: 1px solid $brand-color;    
    padding: 0.6em 2em;
    text-decoration: none;
    border-radius: 5px; 
    font-size: 18px;    
    text-transform: uppercase;   
}

a.button:hover,
button:hover {
    background-color: $brand-color-light;  

}

a.button.estimate {
    padding: 0.7em 1.2em;
    font-size: 30px;
}

.space-before {
    margin-top: 1em;
    margin-bottom: 1.5em;
}

.clearfix {
    clear: both;
}

.services {
    .space-before {
        margin-top: 50px;
    }
}

.image-hero {
    $padding: 6em;
    float: left;
    height: calc(100vw - #{$padding});
    margin-bottom: $image-hero-bottom-cut;
    overflow: hidden;

    &.floated {
        shape-outside: circle();
    }

    > * {
        @include round-image(calc(100vw - #{$padding}));
    }

    .project & {
        height: calc(100vw - #{$padding});

        img {
            border: 0.5em solid $black-color;
        }
    }
}

.images-group {
    text-align: center;

    img {
        margin: 0 0.5em 1em;
    }
}

.image-lg {
    @include round-image(128px);
}

.image-md {
    @include round-image(128px);
}

.image-sm {
    @include round-image(120px);
}

.slogan {
    font-weight: normal;

    span {
        color: #888;
    }
}

.subheading {
    clear: both;
    position: relative;
    padding-top: 1em;
    margin-bottom: 1.5em;
    color: $brand-color;
    // text-transform: uppercase;
    font-size: 2em;

    &:after {
        @include bars-line();
        bottom: -.5em;
        left: 0;
        z-index: -2;
        width: 100%;
    }

    &.black {
        color: $black;
    }
}

.centered-info {
    text-align: center;
    font-size: larger;
}

.testimonials {
    max-width: 60em;
    margin-left: 96px;

    .subheading {
        position: relative;
        margin-bottom: 0;
        padding-left: 2em;

        &:after {
            bottom: 0;
            left: 1.5em;
            width: 5px;
            height: 1.25em;
            -webkit-transform: skewX(-15deg);
            transform: skewX(-15deg);
            background-image: none;
            background-color: #ddd;
        }
    }

    .testimonials-list {
        overflow: hidden;
        border: 1px solid #ddd;
        margin-bottom: 3em;

        blockquote {
            position: relative;
            overflow: hidden;
            padding-top: 2em;

            &:before {
                content: '';
                position: absolute;
                height: 15px;
                background-image: -webkit-repeating-linear-gradient(345deg, #fff, #fff 5px, #ddd 0, #ddd 8px);
                background-image: repeating-linear-gradient(105deg, #fff, #fff 5px, #ddd 0, #ddd 8px);
                top: 0;
                width: 100%;
            }

            &:first-child {
                padding-top: 0;

                &:before {
                    display: none;
                }
            }
        }

        cite {
            float: right;
            padding-right: 2px;
        }
    }
}
/* ... */

